# atlas

./: .gitignore  LICENSE  README.md  analyze_audio.py  artnet_test.py  credentials.example.json  hue_stream.py  makeshow.py  music.xsq  play.py  show.py  strobe_test.py  xlights_networks.xml  xlights_rgbeffects.xml
agent/: Cargo.toml  README.md  atlas-agent.service
agent/src/: actions.rs  activity.rs  main.rs  metrics.rs  power.rs  stream.rs  terminal.rs  vpn.rs
agents/: README.md
ai/: ai_show.py
analysis_cache/: darude-sandstorm.analysis.json  fein-final.analysis.json  lmfao-party-rock-anthem-ft.analysis.json  music.analysis.json
analyze/: analyze_song.py
apps/atlas-admin/: .gitignore  README.md
apps/atlas-lightshow/: README.md
apps/atlas-photos/: README.md
apps/atlas-photos/server/: Cargo.toml  atlas-photos.service
apps/atlas-photos/server/src/: countries.rs  drive.rs  main.rs
backend/: README.md
backend/docker/: .env.example  compose.yml
backend/schema/: 001_init.sql  003_pipeline.sql  004_exif.sql  (+3 more)
bridge/: hue_stream.py
builder/: Dockerfile  README.md
cli/: Cargo.toml  README.md
docs/: SETUP.md
fog/: fog.ino  fog_trigger.py
ios/: .gitignore  README.md
lightshows/: .gitignore  README.md  makeshow.py
lslib/: __init__.py  compiler.py  lattice.py
scripts/: README.md  export_fseq.py  takeout-transfer.sh
shows/: darude-sandstorm.show.json  fein-final.show.json  james-hype-miggy-dela-rosa-ferrari-lyric-video.show.json  travis-scott-fe-n-ft.show.json
tests/: golden.py
tools/: beat_cal.py  fog_trigger.py
xlights/: music.xsq
(+146 files in other folders)
