[package]
name = "atlas-photos"
version = "0.1.0"
edition = "2021"
description = "Timeline/thumbnail/streaming server for the atlas photo library"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
